@@ -8,6 +8,7 @@ Revision history for Perl extension App::Sqitch
      - The help emitted when an unknown option is passed to `sqitch` now
        consists of a usage statement and brief table of options, rather than
        the entire man page.
+     - Added the project name in a header to the output of the `plan` command.
 
 0.965  2013-04-23T16:25:59Z
      - Fixed failing test due to line-ending character variations on Windows.
